# omp-demo

./: CMakeLists.txt  examp1.cpp  examp2.cpp  examp3.cpp  examp4.cpp  examp5.cpp  omp-demo.sh
